tests/invalid_sem/def/def14.java
class Main {
    static int a = 5;
    static void run() {
        int pes;
    }

    static int pes(int b) {
        return 1;
    }
}